FUTURE-WORK-WIP staticd: add new Zclient function to manipulate srv6-function
This commit is a part of #5853 works that add SRv6 zclient implementation
on staticd. With this commit, staticd can know SRv6-locator/function context
when user or routing daemon create SRv6-locator/function on zebra.

Signed-off-by: Hiroki Shirokura <slank.dev@gmail.com>

--- a/staticd/subdir.am
+++ b/staticd/subdir.am
@@ -18,6 +18,7 @@ staticd_libstatic_a_SOURCES = \
 	staticd/static_zebra.c \
 	staticd/static_vrf.c \
 	staticd/static_vty.c \
+	staticd/static_srv6.c \
 	# end
 
 noinst_HEADERS += \
@@ -28,6 +29,7 @@ noinst_HEADERS += \
 	staticd/static_routes.h \
 	staticd/static_vty.h \
 	staticd/static_vrf.h \
+	staticd/static_srv6.h \
 	# end
 
 staticd/static_vty_clippy.c: $(CLIPPY_DEPS)
