--- a/zebra/subdir.am
+++ b/zebra/subdir.am
@@ -12,6 +12,7 @@ vtysh_scan += \
 	$(top_srcdir)/zebra/rtadv.c \
 	$(top_srcdir)/zebra/zebra_mlag_vty.c \
 	$(top_srcdir)/zebra/zebra_mpls_vty.c \
+	$(top_srcdir)/zebra/zebra_srv6_vty.c \
 	$(top_srcdir)/zebra/zebra_ptm.c \
 	$(top_srcdir)/zebra/zebra_pw.c \
 	$(top_srcdir)/zebra/zebra_routemap.c \
@@ -82,6 +83,7 @@ zebra_zebra_SOURCES = \
 	zebra/zebra_mpls_openbsd.c \
 	zebra/zebra_mpls_null.c \
 	zebra/zebra_mpls_vty.c \
+	zebra/zebra_srv6_vty.c \
 	zebra/zebra_mroute.c \
 	zebra/zebra_nhg.c \
 	zebra/zebra_ns.c \
@@ -145,6 +147,7 @@ noinst_HEADERS += \
 	zebra/zebra_dplane.h \
 	zebra/zebra_memory.h \
 	zebra/zebra_mpls.h \
+	zebra/zebra_srv6_vty.h \
 	zebra/zebra_mroute.h \
 	zebra/zebra_nhg.h \
 	zebra/zebra_nhg_private.h \
