--- a/zebra/subdir.am
+++ b/zebra/subdir.am
@@ -83,6 +83,7 @@ zebra_zebra_SOURCES = \
 	zebra/zebra_mpls_openbsd.c \
 	zebra/zebra_mpls_null.c \
 	zebra/zebra_mpls_vty.c \
+	zebra/zebra_srv6.c \
 	zebra/zebra_srv6_vty.c \
 	zebra/zebra_mroute.c \
 	zebra/zebra_nhg.c \
@@ -147,6 +148,7 @@ noinst_HEADERS += \
 	zebra/zebra_dplane.h \
 	zebra/zebra_memory.h \
 	zebra/zebra_mpls.h \
+	zebra/zebra_srv6.h \
 	zebra/zebra_srv6_vty.h \
 	zebra/zebra_mroute.h \
 	zebra/zebra_nhg.h \
