--- a/zebra/subdir.am
+++ b/zebra/subdir.am
@@ -13,6 +13,7 @@ vtysh_scan += \
 	zebra/zebra_gr.c \
 	zebra/zebra_mlag_vty.c \
 	zebra/zebra_mpls_vty.c \
+	zebra/zebra_srv6_vty.c \
 	zebra/zebra_ptm.c \
 	zebra/zebra_pw.c \
 	zebra/zebra_routemap.c \
@@ -87,6 +88,7 @@ zebra_zebra_SOURCES = \
 	zebra/zebra_mpls_openbsd.c \
 	zebra/zebra_mpls_null.c \
 	zebra/zebra_mpls_vty.c \
+	zebra/zebra_srv6_vty.c \
 	zebra/zebra_mroute.c \
 	zebra/zebra_nb.c \
 	zebra/zebra_nb_config.c \
@@ -149,6 +151,7 @@ noinst_HEADERS += \
 	zebra/zebra_mlag.h \
 	zebra/zebra_mlag_vty.h \
 	zebra/zebra_mpls.h \
+	zebra/zebra_srv6_vty.h \
 	zebra/zebra_mroute.h \
 	zebra/zebra_nb.h \
 	zebra/zebra_netns_id.h \
