--- a/tests/topotests/route-scale/r1/zebra.conf
+++ b/tests/topotests/route-scale/r1/zebra.conf
@@ -1,3 +1,8 @@
+!log stdout notifications
+!log monitor notifications
+!log commands
+log file zebra.log debugging
+!
 int r1-eth0
   ip addr 192.168.0.1/24
 !
