--- a/tests/topotests/route-scale/r1/zebra.conf
+++ b/tests/topotests/route-scale/r1/zebra.conf
@@ -3,11 +3,11 @@
 !log commands
 log file zebra.log debugging
 !
-debug zebra events
-debug zebra kernel
-debug zebra rib detailed
-debug zebra nexthop detailed
-debug zebra dplane detailed
+!debug zebra events
+!debug zebra kernel
+!debug zebra rib detailed
+!debug zebra nexthop detailed
+!debug zebra dplane detailed
 !
 int r1-eth0
   ip addr 192.168.0.1/24
