DEBUG topotests/srv6_manager r1/*.conf

--- a/tests/topotests/srv6_manager/r1/bgpd.conf
+++ b/tests/topotests/srv6_manager/r1/bgpd.conf
@@ -1,4 +1,10 @@
-
+hostname r1
+!
+log stdout notifications
+log monitor notifications
+log commands
+log file all.log debugging
+!
 router bgp 1
  address-family ipv4 vpn
   segment-routing srv6
