--- a/tests/topotests/srv6_manager/r1/sharpd.conf
+++ b/tests/topotests/srv6_manager/r1/sharpd.conf
@@ -3,5 +3,5 @@ hostname r1
 log stdout notifications
 log monitor notifications
 log commands
-log file all.log debugging
+log file sharpd.log debugging
 !
