--- a/tests/topotests/srv6_manager/r1/zebra.conf
+++ b/tests/topotests/srv6_manager/r1/zebra.conf
@@ -6,7 +6,7 @@ debug zebra rib detailed
 log stdout notifications
 log monitor notifications
 log commands
-log file all.log debugging
+log file zebra.log debugging
 !
 segment-routing
  srv6
