(step3) [WIP] static: add static SRv6 SID configuration cli

--- a/staticd/subdir.am
+++ b/staticd/subdir.am
@@ -21,6 +21,7 @@ staticd_libstatic_a_SOURCES = \
 	staticd/static_vty.c \
 	staticd/static_nb.c \
 	staticd/static_nb_config.c \
+	staticd/static_srv6.c \
 	# end
 
 noinst_HEADERS += \
@@ -32,6 +33,7 @@ noinst_HEADERS += \
 	staticd/static_vty.h \
 	staticd/static_vrf.h \
 	staticd/static_nb.h \
+	staticd/static_srv6.h \
 	# end
 
 clippy_scan += \
