--- a/tests/topotests/bgp_prefix_sid2/peer1/exabgp.cfg
+++ b/tests/topotests/bgp_prefix_sid2/peer1/exabgp.cfg
@@ -16,6 +16,7 @@ group controller {
                 extended-community [ target:2:10 ];
                 label 3;
                 attribute [0x28 0xc0 0x0500150020010db800010001000000000000000100ffff00 ];
+                # label 300;
             }
             route 2001:2::/64 {
                 rd 2:10;
@@ -23,6 +24,7 @@ group controller {
                 extended-community [ target:2:10 ];
                 label 3;
                 attribute [0x28 0xc0 0x0500150020010db800010001000000000000000100ffff00 ];
+                # label 300;
             }
         }
     }
